# emojidb

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: README.md
emojidb/: __init__.py  cache.py  client.py  requirements.txt
emojidb/test/: test_client.py
